12-mini-pro-1/pubip.tf
resource "random_pet" "lb_hostname" {}

resource "azurerm_public_ip" "pubip" {
  name                = "pubipminipro78663"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  allocation_method   = "Static"
  sku                 = "Standard"
  zones               = ["1", "2", "3"]
  domain_name_label   = "${azurerm_resource_group.rg.name}-${random_pet.lb_hostname.id}"
}
